tests/NormalTests/paczka1/small_fuzzy/33477112.err
Error in line 4: sgNxJ A189 11,1
Error in line 3: pGLk A189 84,4
Error in line 10: pGLkA18072,8
Error in line 8: pGLk A607 61,4
Error in line 12: hBRL0 A180 47,2
Error in line 14: hBRL0 A607 72,3
Error in line 15: hBRL0 A189 15,6
